--- a/package.json
+++ b/package.json
@@ -9,25 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-cloudwatch": "^3.873.0",
+    "@aws-sdk/client-cost-explorer": "^3.873.0",
+    "@aws-sdk/client-ec2": "^3.873.0",
+    "@aws-sdk/credential-providers": "^3.873.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^7.3.1",
+    "@mui/system": "^7.3.1",
+    "@mui/x-charts": "^8.10.2",
+    "@mui/x-data-grid": "^8.10.2",
+    "date-fns": "^4.1.0",
+    "next": "15.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.7",
-    "@aws-sdk/client-ec2": "^3.676.0",
-    "@aws-sdk/client-cloudwatch": "^3.676.0",
-    "@aws-sdk/client-cost-explorer": "^3.676.0",
-    "@aws-sdk/credential-providers": "^3.676.0",
-    "swr": "^2.2.5",
-    "recharts": "^2.12.7",
-    "zod": "^3.23.8",
-    "date-fns": "^3.6.0"
+    "swr": "^2.2.5"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.7",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5"
   }
 }
